# StarspotMapping

./: AUMic_Cycle1_flare.csv  AUMic_Cycle3_flare.csv  EVLac_Cycle2_flare.csv  Example_NumPyro.py  Flare_EVLac_Cycle2.csv  Flare_YZCMi_Cycle3.csv  README.md  SpotMapping_JAX_NumPyro_PT.ipynb  YZCMi_Cycle1_flare.csv  YZCMi_Cycle3_flare.csv  macula.py  pyproject.toml  spotrod.py  visualize.py
src/spotmap/: __init__.py  geometry.py  macula.py  macula_jax.py  ns_jax.py  prior_sim.py  spec_jax.py  spot_flux.py  spotcrossed_flux.py  spotrod_jax.py  spotted_flux.py  svi.py  trans_flux.py
