[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotmap"
version = "0.1.0"
description = "Mapping starspots from photometric variability in JAX"
authors = [
    { name = "Kai Ikuta" }
]
requires-python = ">=3.8"

dependencies = [
    "jax",
    "numpyro",
    "jaxoplanet"
]

[tool.setuptools.packages.find]
where = ["src"]
